# gmserverplugin

./: .gitattributes  Cargo.toml  README.md
.github/workflows/: build.yml
gmserverplugin/: Cargo.toml  gmserverplugin.h
gmserverplugin/src/: lib.rs  sigs.rs  state.rs  util.rs
gmserverplugin/src/hooks/: after_init.rs  before_init.rs  mod.rs  newstate.rs
test/: Cargo.toml  build.rs
test/src/: lib.rs  plugin.cpp  plugin.h
